--- a/240203/style.css
+++ b/240203/style.css
@@ -122,7 +122,6 @@ header .btn a span {
   gap: 12%;
 }
 .container .frame .content .name span {
-  color: #222;
   font-size: 60px;
   font-family: "Roboto_head";
   font-weight: 900;
@@ -603,7 +602,7 @@ header .btn a span {
 .contact {
   background: #f4e8df;
   width: 100%;
-  height: 900px;
+  height: 100%;
 }
 .contact .seul {
   padding: 100px 0 50px 0;
@@ -694,8 +693,8 @@ header .btn a span {
   }
 }
 
-/*============= tablet============ */
-@media screen and (max-width: 768px) {
+/*==========tablet ==========*/
+@media screen and (max-width: 1024px) {
   header {
     position: fixed;
     display: flex;
@@ -817,7 +816,6 @@ header .btn a span {
     gap: 15%;
   }
   .container .frame .content .name span {
-    color: #222;
     font-size: 45px;
     font-family: "Roboto_head";
     font-weight: 900;
@@ -969,19 +967,15 @@ header .btn a span {
   .section01 {
     background: white;
     width: 100%;
-    height: 840px;
-  }
-  .section01 input {
-    display: none;
-  }
-  .section01 input[id=tab1]:checked ~ .section-menu {
-    left: 0;
-  }
-  .section01 input[id=tab2]:checked ~ .section-menu {
-    left: -806px;
+    height: 1000px;
+    position: relative;
+    overflow: hidden;
   }
   .section01 .kim {
-    margin: 100px 0 50px 0;
+    position: absolute;
+    top: -5%;
+    left: 50%;
+    transform: translateX(-50%);
     text-align: center;
   }
   .section01 .kim h1 {
@@ -992,16 +986,17 @@ header .btn a span {
     font-style: italic;
   }
   .section01 .section-menu {
-    width: 768px;
-    height: 1000px;
-    position: relative;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 20%;
   }
   .section01 .section-menu .first-menu {
-    position: absolute;
-    top: 5%;
-    left: 0;
-    width: 786px;
-    transition: all 0.5s ease-in;
+    display: flex;
+    width: 95%;
+    height: auto;
+    left: 2%;
+    top: 0;
   }
   .section01 .section-menu .first-menu .birth {
     background: #ffbe6f;
@@ -1091,10 +1086,12 @@ header .btn a span {
     }
   }
   .section01 .section-menu .second-menu {
+    display: flex;
     position: absolute;
-    top: 30%;
-    left: 0;
-    width: 768x;
+    left: -50%;
+    top: 0;
+    width: 95%;
+    height: auto;
   }
   .section01 .section-menu .second-menu div {
     display: inline-block;
@@ -1145,7 +1142,8 @@ header .btn a span {
   .section02 {
     background: #ffe4ea;
     width: 100%;
-    height: 1000px;
+    height: auto;
+    position: relative;
   }
   .section02 .yi {
     padding: 100px 0 50px 0;
@@ -1159,16 +1157,16 @@ header .btn a span {
     font-style: italic;
   }
   .section02 .section-inner {
-    width: 1500px;
+    width: 80%;
     height: 60%;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-flow: column nowrap;
   }
   .section02 .section-inner .hobby {
-    width: 350px;
+    width: 400px;
     height: 550px;
+    margin: 30px 0;
     background: #f8d77a;
     border-radius: 10px;
     overflow: hidden;
@@ -1198,16 +1196,17 @@ header .btn a span {
     text-align: center;
   }
   .section02 .section-inner .hobby-inner {
-    width: 880px;
-    height: 600px;
+    width: 768px;
+    height: auto;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
     gap: 30px;
+    margin-bottom: 30px;
   }
   .section02 .section-inner .hobby-inner .box {
-    width: 400px;
+    width: 50%;
     height: 250px;
     background: #fff;
     border-radius: 10px;
@@ -1293,7 +1292,702 @@ header .btn a span {
   .contact {
     background: #f4e8df;
     width: 100%;
-    height: 900px;
+    height: auto;
+  }
+  .contact .seul {
+    padding: 100px 0 50px 0;
+    text-align: center;
+  }
+  .contact .seul h1 {
+    color: #ff5484;
+    font-size: 35px;
+    font-family: "Roboto_head";
+    font-weight: 900;
+    font-style: italic;
+  }
+  .contact .contact-inner {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    height: 600px;
+  }
+  .contact .contact-inner .mysocial {
+    position: relative;
+    width: 500px;
+    height: 500px;
+  }
+  .contact .contact-inner .mysocial .network {
+    position: absolute;
+    right: 16%;
+    top: 20%;
+    font: bold 40px/1.5rem "Roboto";
+  }
+  .contact .contact-inner .mysocial .social {
+    position: absolute;
+    right: 65%;
+    top: 38%;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+  .contact .contact-inner .mysocial .social i {
+    padding: 12px;
+    font-size: 30px;
+  }
+  .contact .contact-inner .mysocial .link {
+    position: absolute;
+    right: 25%;
+    top: 36%;
+  }
+  .contact .contact-inner .mysocial .link h3 {
+    padding: 16px;
+  }
+  .contact .contact-inner .map {
+    width: 800px;
+    height: 500px;
+    position: relative;
+  }
+  .contact .contact-inner .map .fa-location-dot {
+    position: absolute;
+    top: 60%;
+    right: 30%;
+    color: crimson;
+    font-size: 40px;
+    animation: home 2s linear infinite;
+    animation-fill-mode: both;
+  }
+  .contact .contact-inner .map iframe {
+    width: 100%;
+    height: 100%;
+  }
+  @keyframes home {
+    0% {
+      opacity: 0.3;
+      transform: scale(1);
+    }
+    25% {
+      opacity: 0.6;
+      transform: scale(1.2);
+    }
+    50% {
+      opacity: 1;
+      transform: scale(1.3);
+    }
+    75% {
+      opacity: 0.6;
+      transform: scale(1.2);
+    }
+    100% {
+      opacity: 0.3;
+      transform: scale(1);
+    }
+  }
+}
+/*==========mobile ==========*/
+@media screen and (max-width: 768px) {
+  header {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+    margin: 0 auto;
+    gap: 5%;
+    z-index: 100;
+    background: #fff;
+  }
+  header.active {
+    background: #ff5484;
+    color: #fff;
+  }
+  header h1 {
+    position: absolute;
+    left: 5%;
+    bottom: 14px;
+    display: inline-block;
+    width: 800px;
+  }
+  header h1 span i {
+    color: #d35583;
+    font-size: 50px;
+    text-align: right;
+    width: 50px;
+    height: 50px;
+  }
+  header h1 span i.active {
+    color: #fff;
+  }
+  header h1 a {
+    font-size: 42px;
+  }
+  header .btn {
+    display: none;
+    width: 100%;
+    height: 160px;
+    position: absolute;
+    left: 0;
+    top: 100%;
+  }
+  header .btn.active {
+    display: block;
+  }
+  header .btn a {
+    display: block;
+    width: 100%;
+    height: 50px;
+    background-color: #d35583;
+    border-bottom: 1px solid #fff;
+  }
+  header .btn a span {
+    display: inline-block;
+    margin-left: 30px;
+    font-family: "Roboto_head";
+    font-size: 22px;
+    font-weight: 500;
+  }
+  header .trigger {
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    transform: translateY(-40%);
+    cursor: pointer;
+  }
+  header .trigger span {
+    display: block;
+    width: 30px;
+    height: 3px;
+    margin-bottom: 8px;
+    background: #000;
+  }
+  .container {
+    background: url("./img/bg_main.jpg");
+    width: 100%;
+    height: 920px;
+    padding: 100px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .container .frame {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    height: 90%;
+    width: 1500px;
+    position: relative;
+    border: 10px solid #d35583;
+    box-shadow: 0 0 10px #a92f51;
+    border-radius: 200px;
+    overflow: hidden;
+  }
+  .container .frame::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url("./img/pen.jpg") center/cover;
+    opacity: 0.8;
+    border-radius: 190px;
+  }
+  .container .frame .content {
+    display: flex;
+    float: left;
+    width: 75%;
+    height: 420px;
+    padding-right: 70px;
+    justify-content: center;
+  }
+  .container .frame .content .name {
+    width: 30%;
+    height: 100%;
+    padding-right: 30px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: end;
+    gap: 15%;
+  }
+  .container .frame .content .name span {
+    font-size: 45px;
+    font-family: "Roboto_head";
+    font-weight: 900;
+    font-style: italic;
+    cursor: pointer;
+    transition: all 0.3s;
+    opacity: 0;
+    animation: name 1s linear;
+    animation-fill-mode: both;
+  }
+  .container .frame .content .name span:hover {
+    color: #fff;
+  }
+  .container .frame .content .name span:nth-child(1) {
+    animation-delay: 0.1s;
+  }
+  .container .frame .content .name span:nth-child(2) {
+    animation-delay: 0.5s;
+  }
+  .container .frame .content .name span:nth-child(3) {
+    animation-delay: 0.9s;
+  }
+  @keyframes name {
+    0% {
+      opacity: 0;
+      transform: translate(-200px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(-80px);
+    }
+  }
+  .container .frame .content .slide {
+    width: 100%;
+    margin-right: 22px;
+  }
+  .container .frame .content .slide ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    height: 130px;
+    gap: 8px;
+  }
+  .container .frame .content .slide ul li {
+    width: 100%;
+    height: 100%;
+  }
+  .container .frame .content .slide ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+  .container .frame .content .slide ul li a::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 30px;
+    background: #817984;
+    opacity: 0;
+    transition: all 0.3s;
+  }
+  .container .frame .content .slide ul li a:hover::before {
+    opacity: 0.6;
+  }
+  .container .frame .content .slide ul li a h1 {
+    width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 150%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-family: "Roboto";
+    font-size: 25px;
+    font-weight: 400;
+    color: #fff;
+    opacity: 0;
+    transition: all 0.3s;
+  }
+  .container .frame .content .slide ul li a:hover h1 {
+    top: 50%;
+    opacity: 1;
+  }
+  .container .frame .content .slide ul li a img {
+    width: 100%;
+    height: 128px;
+    border-radius: 30px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: 50% 60%;
+       object-position: 50% 60%;
+  }
+  .container .frame .content .slide ul li a #hang {
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: 50% 28%;
+       object-position: 50% 28%;
+  }
+  .container .frame .about {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 25%;
+    height: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 10px;
+  }
+  .container .frame .about div {
+    display: none;
+    width: 100%;
+    animation: side 0.5s linear;
+    animation-fill-mode: both;
+    opacity: 0;
+  }
+  .container .frame .about div:nth-child(1) {
+    height: 40%;
+    background: #be502b;
+    border-radius: 5% 0 5% 5%;
+    animation-delay: 0.3s;
+  }
+  .container .frame .about div:nth-child(2) {
+    height: 30%;
+    background: #e4953e;
+    border-radius: 5% 5% 5% 5%;
+    animation-delay: 0.5s;
+  }
+  .container .frame .about div:nth-child(3) {
+    height: 30%;
+    background: #508023;
+    border-radius: 5% 0 0 5%;
+    animation-delay: 0.7s;
+  }
+  @keyframes side {
+    0% {
+      opacity: 0;
+      transform: translateX(100px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(20px);
+    }
+  }
+  .section01 {
+    background: white;
+    width: 100%;
+    height: 1000px;
+    position: relative;
+    overflow: hidden;
+  }
+  .section01 .kim {
+    position: absolute;
+    top: -5%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+  }
+  .section01 .kim h1 {
+    color: #ff5484;
+    font-size: 35px;
+    font-family: "Roboto_head";
+    font-weight: 600;
+    font-style: italic;
+  }
+  .section01 .section-menu {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 20%;
+  }
+  .section01 .section-menu .first-menu {
+    display: flex;
+    flex-flow: column nowrap;
+    width: 95%;
+    height: auto;
+    left: 2%;
+    top: 0;
+  }
+  .section01 .section-menu .first-menu .birth {
+    background: #ffbe6f;
+  }
+  .section01 .section-menu .first-menu .personal {
+    background: #eb9598;
+  }
+  .section01 .section-menu .first-menu .style {
+    background: #7cc1eb;
+  }
+  .section01 .section-menu .first-menu div {
+    display: inline-block;
+    width: 220px;
+    height: 220px;
+    border-radius: 50% 50% 0 0;
+    position: relative;
+    margin: 5px;
+  }
+  .section01 .section-menu .first-menu div h1 {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: "Roboto_head";
+    font-size: 30px;
+    color: #fff;
+    font-style: italic;
+  }
+  .section01 .section-menu .first-menu div p {
+    display: inline-block;
+    width: 400px;
+    margin-top: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: "Roboto";
+    font-size: 20px;
+    text-align: center;
+  }
+  .section01 .section-menu .first-menu div p span {
+    font-family: "Roboto";
+    font-size: 25px;
+  }
+  .section01 .section-menu .first-menu div p .daytext {
+    position: absolute;
+    left: 33%;
+    top: -20%;
+    animation: daytext 3s 0.1s ease-out infinite;
+  }
+  @keyframes daytext {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1.3);
+    }
+  }
+  .section01 .section-menu .first-menu div p .personaltext {
+    position: absolute;
+    left: 39%;
+    top: -20%;
+    animation: personaltext 3s linear infinite;
+    animation-delay: 0.2s;
+  }
+  @keyframes personaltext {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1.3);
+    }
+  }
+  .section01 .section-menu .first-menu div p .styletext {
+    position: absolute;
+    left: 39%;
+    top: -20%;
+    animation: daytext 3s linear infinite;
+    animation-delay: 0.3s;
+  }
+  @keyframes daytext {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1.3);
+    }
+  }
+  .section01 .section-menu .second-menu {
+    display: flex;
+    flex-flow: column wrap;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    width: 95%;
+    height: auto;
+  }
+  .section01 .section-menu .second-menu div {
+    display: inline-block;
+    width: 220px;
+    height: 220px;
+    border-radius: 50% 50% 0 0;
+    margin: 5px;
+  }
+  .section01 .section-menu .second-menu .a {
+    background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg") center/cover no-repeat;
+  }
+  .section01 .section-menu .second-menu .b {
+    background: url("./img/board.jpg") 50% 60%/cover no-repeat;
+  }
+  .section01 .section-menu .second-menu .c {
+    background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50% 70%/cover no-repeat;
+  }
+  .section01 .buttons {
+    display: none;
+    width: 500px;
+    height: 200px;
+    text-align: center;
+    line-height: 200px;
+    margin: 0 auto;
+  }
+  .section01 .buttons label {
+    margin: 0 5px;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 100%;
+    background: #ff5484;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  .section01 .buttons label:nth-child(1):hover {
+    transform: scale(1.5);
+    background: #ffbe6f;
+  }
+  .section01 .buttons label:nth-child(2):hover {
+    transform: scale(1.5);
+    background: #eb9598;
+  }
+  .section01 .buttons label:nth-child(3):hover {
+    transform: scale(1.5);
+    background: #7cc1eb;
+  }
+  .section02 {
+    background: #ffe4ea;
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .section02 .yi {
+    padding: 100px 0 50px 0;
+    text-align: center;
+  }
+  .section02 .yi h1 {
+    color: #ff5484;
+    font-size: 35px;
+    font-family: "Roboto_head";
+    font-weight: 600;
+    font-style: italic;
+  }
+  .section02 .section-inner {
+    width: 80%;
+    height: 60%;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+  .section02 .section-inner .hobby {
+    width: 400px;
+    height: 550px;
+    margin: 30px 0;
+    background: #f8d77a;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+  }
+  .section02 .section-inner .hobby img {
+    width: 280px;
+    float: right;
+    position: absolute;
+    bottom: 3%;
+    right: 4%;
+    border-radius: 10%;
+  }
+  .section02 .section-inner .hobby .title {
+    font-family: "Roboto";
+    color: #b7751e;
+    font-size: 30px;
+    font-weight: 500;
+    margin: 20px;
+  }
+  .section02 .section-inner .hobby .des {
+    font-family: "Roboto_head";
+    font-size: 45px;
+    font-weight: 600;
+    margin: 5px;
+    color: #f2c158;
+    text-align: center;
+  }
+  .section02 .section-inner .hobby-inner {
+    width: 768px;
+    height: auto;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    margin-bottom: 30px;
+  }
+  .section02 .section-inner .hobby-inner .box {
+    width: 50%;
+    height: 250px;
+    background: #fff;
+    border-radius: 10px;
+    position: relative;
+  }
+  .section02 .section-inner .hobby-inner .box .skate {
+    background: #bdbb54;
+    width: 180px;
+    height: inherit;
+    border-radius: 10px;
+    text-align: center;
+    padding-top: 8px;
+  }
+  .section02 .section-inner .hobby-inner .box .skate img {
+    width: 110px;
+  }
+  .section02 .section-inner .hobby-inner .box .soccer {
+    background: #4e77b3;
+    width: 180px;
+    height: inherit;
+    border-radius: 10px;
+    text-align: center;
+    padding-top: 8px;
+  }
+  .section02 .section-inner .hobby-inner .box .soccer img {
+    margin-top: 22px;
+    width: 150px;
+  }
+  .section02 .section-inner .hobby-inner .box .dog {
+    background: #fcdebc;
+    width: 180px;
+    height: inherit;
+    border-radius: 10px;
+    text-align: center;
+    padding-top: 8px;
+  }
+  .section02 .section-inner .hobby-inner .box .dog img {
+    margin-top: 50px;
+    width: 160px;
+  }
+  .section02 .section-inner .hobby-inner .box .music {
+    background: #db7760;
+    width: 180px;
+    height: inherit;
+    border-radius: 10px;
+    text-align: center;
+    padding-top: 8px;
+  }
+  .section02 .section-inner .hobby-inner .box .music img {
+    margin-top: 50px;
+    width: 180px;
+  }
+  .section02 .section-inner .hobby-inner .box span {
+    color: #b7751e;
+    font-size: 25px;
+    font-weight: 600;
+    position: absolute;
+    top: 10%;
+    left: 48%;
+  }
+  .section02 .section-inner .hobby-inner .box .viewmore {
+    background: #f8d77a;
+    width: 3em;
+    height: 3em;
+    border-radius: 100%;
+    position: absolute;
+    bottom: 7%;
+    right: 5%;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  .section02 .section-inner .hobby-inner .box .viewmore:hover {
+    transform: scale(1.2);
+  }
+  .section02 .section-inner .hobby-inner .box .viewmore i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2em;
+    color: #fff;
+  }
+  .contact {
+    background: #f4e8df;
+    width: 100%;
+    height: auto;
   }
   .contact .seul {
     padding: 100px 0 50px 0;
